--- a/Flyaround/composer.json
+++ b/Flyaround/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "wilder11/flyaround",
+    "name": "sbeuh/livecoding",
     "license": "proprietary",
     "type": "project",
     "autoload": {
         "psr-4": {
-            "WCS\\": "src/WCS"
+            "":"src"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -13,7 +13,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "":"src"
         },
         "files": [
             "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
