--- a/Flyaround/composer.json
+++ b/Flyaround/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sbeuh/livecoding",
+    "name": "pierre Amboise",
     "license": "proprietary",
     "type": "project",
     "autoload": {
