--- a/Flyaround/app/config/config.yml
+++ b/Flyaround/app/config/config.yml
@@ -41,10 +41,11 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
-        host:     '%database_host%'
-        dbname:   '%database_name%'
-        user:     '%database_user%'
+        driver: pdo_mysql
+        host: '%database_host%'
+        port: '%database_port%'
+        dbname: '%database_name%'
+        user: '%database_user%'
         password: '%database_password%'
         charset: UTF8
         # if using pdo_sqlite as your database driver:
