--- a/Flyaround/app/config/routing.yml
+++ b/Flyaround/app/config/routing.yml
@@ -1,39 +1,29 @@
-wcs_coav_reservation:
-    resource: "@WCSCoavBundle/Controller/ReservationController.php"
-    type:     annotation
-
 wcs_coav_user:
     resource: "@WCSCoavBundle/Controller/UserController.php"
     type:     annotation
 
-wcs_coav_plane_model:
-    resource: "@WCSCoavBundle/Controller/PlaneModelController.php"
+wcs_coav_review:
+    resource: "@WCSCoavBundle/Controller/ReviewController.php"
     type:     annotation
 
 wcs_coav_terrain:
     resource: "@WCSCoavBundle/Controller/TerrainController.php"
     type:     annotation
 
-wcs_coav_flight:
-    resource: "@WCSCoavBundle/Controller/FlightController.php"
-    type:     annotation
-
 wcs_coav_reservation:
     resource: "@WCSCoavBundle/Controller/ReservationController.php"
     type:     annotation
 
-wcs_coav_listing:
-    resource: "@WCSCoavBundle/Controller/ListingController.php"
+wcs_coav_flight:
+    resource: "@WCSCoavBundle/Controller/FlightController.php"
     type:     annotation
 
-wcs_coav_listing:
-    resource: "@WCSCoavBundle/Controller/ReviewController.php"
+wcs_coav_plane_model:
+    resource: "@WCSCoavBundle/Controller/PlaneModelController.php"
     type:     annotation
 
 wcs_coav:
     resource: "@WCSCoavBundle/Resources/config/routing.yml"
     prefix:   /
 
-app:
-    resource: '@WCSCoavBundle/Controller/'
-    type: annotation
+
