--- a/Flyaround/app/config/routing.yml
+++ b/Flyaround/app/config/routing.yml
@@ -26,4 +26,36 @@ wcs_coav:
     resource: "@WCSCoavBundle/Resources/config/routing.yml"
     prefix:   /
 
+app:
+    resource: '@WCSCoavBundle/Controller/'
+    type: annotation
 
+app_listing:
+    resource: "@WCSCoavBundle/Controller/ListingController.php"
+    type: annotation
+
+app_review:
+    resource: "@WCSCoavBundle/Controller/ReviewController.php"
+    type: annotation
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
