--- a/Flyaround/app/config/routing.yml
+++ b/Flyaround/app/config/routing.yml
@@ -1,19 +1,3 @@
-wcs_coav_user:
-    resource: "@WCSCoavBundle/Controller/UserController.php"
-    type:     annotation
-
-wcs_coav_review:
-    resource: "@WCSCoavBundle/Controller/ReviewController.php"
-    type:     annotation
-
-wcs_coav_terrain:
-    resource: "@WCSCoavBundle/Controller/TerrainController.php"
-    type:     annotation
-
-wcs_coav_reservation:
-    resource: "@WCSCoavBundle/Controller/ReservationController.php"
-    type:     annotation
-
 wcs_coav_flight:
     resource: "@WCSCoavBundle/Controller/FlightController.php"
     type:     annotation
@@ -22,40 +6,29 @@ wcs_coav_plane_model:
     resource: "@WCSCoavBundle/Controller/PlaneModelController.php"
     type:     annotation
 
+wcs_coav_user:
+    resource: "@WCSCoavBundle/Controller/UserController.php"
+    type:     annotation
+
+wcs_coav_reservation:
+    resource: "@WCSCoavBundle/Controller/ReservationController.php"
+    type:     annotation
+
+wcs_coav_terrain:
+    resource: "@WCSCoavBundle/Controller/TerrainController.php"
+    type:     annotation
+
 wcs_coav:
     resource: "@WCSCoavBundle/Resources/config/routing.yml"
     prefix:   /
 
-app:
-    resource: '@WCSCoavBundle/Controller/'
-    type: annotation
-
-app_listing:
+wcs_coav_listing:
     resource: "@WCSCoavBundle/Controller/ListingController.php"
-    type: annotation
+    type:     annotation
 
-app_review:
+wcs_coav_review:
     resource: "@WCSCoavBundle/Controller/ReviewController.php"
-    type: annotation
+    type:     annotation
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-
-fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
-
-fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
-
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
-
-fos_user_resetting:
-    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
-
-fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
